RESOLVED FIXED45852
Range::selectNode and selectNodeContents misbehave when argument is in another document
https://bugs.webkit.org/show_bug.cgi?id=45852
Summary Range::selectNode and selectNodeContents misbehave when argument is in anothe...
Alexey Proskuryakov
Reported 2010-09-15 16:49:33 PDT
These function should just work - but the former raises an exception, while another produces an invalid range. Working with an invalid range causes badness later on (at least exception failures).
Attachments
proposed fix (6.90 KB, patch)
2010-09-15 16:52 PDT, Alexey Proskuryakov
no flags
Alexey Proskuryakov
Comment 1 2010-09-15 16:52:05 PDT
Created attachment 67743 [details] proposed fix
WebKit Commit Bot
Comment 2 2010-09-16 08:06:10 PDT
Comment on attachment 67743 [details] proposed fix Clearing flags on attachment: 67743 Committed r67618: <http://trac.webkit.org/changeset/67618>
WebKit Commit Bot
Comment 3 2010-09-16 08:06:15 PDT
All reviewed patches have been landed. Closing bug.
Michal Zalewski
Comment 4 2010-09-17 11:08:43 PDT
This is non-security, right?
Alexey Proskuryakov
Comment 5 2010-09-17 11:21:54 PDT
Yes, I don't see any way this would be a security issue. Just crashing with assertions when working on bug 42959.
Tim Down
Comment 6 2011-08-25 09:48:26 PDT
This is a subset of bug 42517, which has not been fixed.
Lucas Forschler
Comment 7 2019-02-06 09:03:35 PST
Mass moving XML DOM bugs to the "DOM" Component.
Note You need to log in before you can comment on or make changes to this bug.