2010-09-16  Alexey Proskuryakov  <ap@apple.com>

Reviewed by Adam Barth.

        https://bugs.webkit.org/show_bug.cgi?id=45852
        Range::selectNode and selectNodeContents misbehave when argument is in another document

        * fast/dom/Range/select-node-different-document-expected.txt: Added.
        * fast/dom/Range/select-node-different-document.html: Added.
2010-09-16  Alexey Proskuryakov  <ap@apple.com>

        Reviewed by Adam Barth.

        https://bugs.webkit.org/show_bug.cgi?id=45852
        Range::selectNode and selectNodeContents misbehave when argument is in another document

        Test: fast/dom/Range/select-node-different-document.html

        There is nothing in DOM Traversal spec that says this shouldn't work, and it does work in
        Firefox.

        * dom/Range.cpp:
        (WebCore::Range::setDocument):
        (WebCore::Range::selectNode):
        (WebCore::Range::selectNodeContents):
        * dom/Range.h:

Canonical link: https://commits.webkit.org/58342@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@67618 268f45cc-cd09-0410-ab3c-d52691b4dbfc